cargo: Add alias for running on gdb
Signed-off-by: Jonathas-Conceicao <jadoliveira@inf.ufpel.edu.br>

--- a/.cargo/config
+++ b/.cargo/config
@@ -28,3 +28,10 @@ wquick = [ "watch", "-c"
 # Documentation check; needs package as parameter
 # ex: cargo docc actix
 docc = ["doc",  "--open", "--no-deps", "-p"]
+
+# Run on gdb
+# ex: cargo gdb test
+gdb = [ "-Z", "unstable-options"
+      , "-Zconfig-include"
+      , "--config", "include=\"/home/jonathas/.cargo/gdb_runner.config\""
+      ]
